--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -433,6 +433,7 @@ Objective-C and Objective-C++ Dialects}.
 -Wpacked  -Wno-packed-bitfield-compat  -Wpacked-not-aligned  -Wpadded
 -Wparentheses  -Wno-pedantic-ms-format
 -Wpointer-arith  -Wno-pointer-compare  -Wno-pointer-to-int-cast
+-Wno-poison-system-directories
 -Wno-pragmas  -Wno-pragma-once-outside-header  -Wno-prio-ctor-dtor
 -Wno-psabi
 -Wredundant-decls  -Wrestrict
@@ -11306,6 +11307,14 @@ an error. @option{Wint-to-pointer-cast} is enabled by default.
 @item -Wno-pointer-to-int-cast @r{(C and Objective-C only)}
 Suppress warnings from casts from a pointer to an integer type of a
 different size.
+
+@opindex Wno-poison-system-directories
+@item -Wno-poison-system-directories
+Do not warn for @option{-I} or @option{-L} options using system
+directories such as @file{/usr/include} when cross compiling.  This
+option is intended for use in chroot environments when such
+directories contain the correct headers and libraries for the target
+system rather than the host.
 
 @opindex Winvalid-pch
 @opindex Wno-invalid-pch
